--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,16 @@ dependencies:
   google_fonts: ^6.3.2
   font_awesome_flutter: ^10.11.0
   flutter_otp_text_field: ^1.5.1+1
+  provider: ^6.1.5+1
+  firebase_core: ^4.2.1
+  firebase_auth: ^6.1.2
+  google_sign_in: ^7.2.0
+  cloud_firestore: ^6.1.0
+  json_annotation: ^4.9.0
+  google_maps_flutter: ^2.6.1
+  google_places_flutter: ^2.0.5
+
+
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.3
+  json_serializable: ^6.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -63,6 +75,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
+    - assets/profile_pictures/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
